# just-fast

./: CMakeLists.txt  README.md  just-fast.sh
src/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/FileSystemOperations/: FileSystemOperations.cpp
src/libs/JustFastUi/: JustFastUi.cpp  JustFastUi.h
